tolti verbali da vers.sty

--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -1,11 +1,11 @@
 % Ultime versioni dei documenti
 % da usare tramite il comando \input{../../util/hx-vers}
-% da aggiornare con il comando ./versioni.sh (dalla cartella doc)
+% da aggiornare con il comando ./vers.py dalla directory util
 
-\newcommand{\NdP}{\emph{\mbox{Norme\_di\_progetto\_1\_0\_0.pdf}}}
-\newcommand{\Verbali}{\emph{\mbox{Verbali.pdf}}}
-\newcommand{\AdR}{\emph{\mbox{Analisi\_dei\_requisiti\_1\_0\_0.pdf}}}
-\newcommand{\SdF}{\emph{\mbox{Studio\_di\_fattibilita\_1\_0\_0.pdf}}}
-\newcommand{\PdP}{\emph{\mbox{Piano\_di\_progetto\_1\_0\_0.pdf}}}
-\newcommand{\PdQ}{\emph{\mbox{Piano\_di\_qualifica\_1\_0\_0.pdf}}}
-\newcommand{\Glossario}{\emph{\mbox{Glossario\_1\_0\_0.pdf}}}
+\newcommand{\AdR}{\emph{\mbox{Analisi_dei_requisiti_1_0_0.tex}}}
+\newcommand{\Glossario}{\emph{\mbox{Glossario_1_0_0.tex}}}
+\newcommand{\PdP}{\emph{\mbox{Piano_di_progetto_1_0_0.tex}}}
+\newcommand{\PdQ}{\emph{\mbox{Piano_di_qualifica_1_0_0.tex}}}
+\newcommand{\ST}{\emph{\mbox{Specifica_tecnica_0_0_1.tex}}}
+\newcommand{\NdP}{\emph{\mbox{Norme_di_progetto_1_0_0.tex}}}
+\newcommand{\SdF}{\emph{\mbox{Studio_di_fattibilita_1_0_0.tex}}}
