aggiustate verss. documenti + aggiustato NdP

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -3,10 +3,10 @@
 
 \input{../../util/hx-ambiente}
 
-\version{1.0.0}
+\version{2.0.0}
 \creaz{19 dicembre 2016}
-\author{\ALL}
-\supervisor{\ALL}
+\author{\AZ}
+\supervisor{\GG}
 \uso{esterno}
 \dest{\TV, \RC, \ZU}
 \title{Analisi dei Requisiti}
