--- a/doc/Interni/Norme_di_progetto/diario.tex
+++ b/doc/Interni/Norme_di_progetto/diario.tex
@@ -5,8 +5,8 @@
 	2.0.0 & {\GG} (Responsabile) & 22/02/2017 & Approvazione del documento \\ \hline
 	1.1.1 & {\GG} (Verificatore) & 22/02/2017 & Spostate le definizioni delle metriche dal PdQ alle NdP (in appendice)  \\ \hline
 	1.1.0 & {\GG} (Verificatore) & 10/02/2017 & Verifica del documento \\ \hline
-	1.0.2 & {\LS} (Analista) & 08/02/2017 & Ampliate le sezioni di progettazione (sez. 2.2.2) e codifica (2.2.3) \\ \hline
-	1.0.1 & {\LS} (Analista) & 06/02/2017 & Unificate le sezioni 4.1 e 4.2 \\ \hline
+	1.0.2 & {\LB} (Amministratore) & 08/02/2017 & Ampliate le norme di progettazione (§\ref{sec:design}) e di codifica (§\ref{sec:cod}) \\ \hline
+	1.0.1 & {\LB} (Amministratore) & 06/02/2017 & Unificate le sezioni 4.1 e 4.2 \\ \hline
 	1.0.0 & {\PB} (Responsabile) & 09/01/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\AZ} (Verificatore) & 20/12/2016 & Verifica del documento \\ \hline
 	0.0.5 & {\MM} (Amministratore) & 19/12/2016 & Stesura delle norme sui processi organizzativi \\ \hline
