--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1,11 +1,11 @@
-% piano di progetto
+% piano di Progetto
 % da compilare con il comando pdflatex Esterni/Piano_di_progetto/Piano_di_progetto_v_x.x.x.tex
 
 \input{../../util/hx-ambiente}
-\version{1.0.0}
+\version{2.0.0}
 \creaz{25 dicembre 2016}
-\author{\LB, \PB}
-\supervisor{\GG, \MM}
+\author{\GG, \LS}
+\supervisor{\LB}
 \uso{esterno}
 \dest{\TV, \ZU}
 \title{Piano di Progetto}
