--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -3,10 +3,10 @@
 
 \input{../../util/hx-ambiente}
 
-\version{1.0.0}
+\version{2.0.0}
 \creaz{24 dicembre 2016}
-\author{\GG, \MM}
-\supervisor{\LB, \AZ}
+\author{\LB}
+\supervisor{\GG}
 \uso{interno}
 \dest{\ALL}
 \title{Norme di Progetto}
@@ -80,8 +80,8 @@ Il presente documento si divide in tre sezioni principali:
 \begin{itemize}
 	\item L. Pantieri, \emph{L'arte di scrivere in Latex}: \url{www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}, visitato in data 08/02/2017;
 	\item \emph{SDMetrics User Manual}: \url{www.sdmetrics.com/manual/index.html}, visitato in data 21/02/2017;
-	\item \emph{CodePro Analytix Help Contents};
-	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/index-jsp-135444.html};
+%	\item \emph{CodePro Analytix Help Contents};
+	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html};
 	\item API \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}.
 \end{itemize}
 
@@ -159,7 +159,7 @@ Il presente documento si divide in tre sezioni principali:
 			\item[scenari alternativi] descrizione tramite casi d'uso non appartenenti al flusso principale.
 		\end{description}
 
-	\subsubsection{Progettazione} \label{sec:norme_design}
+	\subsubsection{Progettazione} \label{sec:design}
 	\paragraph{Attività progettuali} Il lavoro dei progettisti consiste nel progettare il software; nello specifico, questo lavoro si articola in due attività:
 	\begin{enumerate}
 		\item \textbf{Progettazione architetturale} (attività descritta in §5.3.5 di ISO/IEC 12207) --- definire l'architettura del sistema, cioè individuare e descrivere le componenti del sistema, esplicitandone i ruoli e le relazioni tra essi; ogni progettista documenta questa attività nel documento di Specifica Tecnica.
@@ -231,7 +231,7 @@ Il presente documento si divide in tre sezioni principali:
 	Scopo dell'attività di codifica è implementare in codice quanto descritto nel documento di Definizione di Prodotto. Per mantenere un alto grado di comprensione del codice sorgente, i programmatori devono seguire delle linee guida sulle tecnologie da usare, sulla nomenclatura e sulla documentazione.
 
 	\paragraph{Convenzioni} \label{sec:conv}
-	Il team seguirà due diverse convenzioni in base al linguaggio utilizzato. Essendo la parte client scritta in javascript verranno seguite le indicazioni riguardo nomenclatura, regole sull'uso di spazi, indentazioni e commenti descritti su \url{http://javascript.crockford.com/code.html}. La parte server è scritta in java e seguirà le indicazioni di \url{http://www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html}.
+	Il team seguirà due diverse convenzioni in base al linguaggio utilizzato. Essendo la parte client scritta in JavaScript, verranno seguite le indicazioni riguardo nomenclatura, regole sull'uso di spazi, indentazioni e commenti descritti su \url{javascript.crockford.com/code.html}. La parte server è scritta in Java e seguirà le indicazioni JavaDoc disponibili su \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html}.
 	
 	\paragraph{Nomenclatura del codice}
 	Al fine di uniformare il codice sorgente, i programmatori devono rispettare le seguenti norme di codifica:
@@ -243,13 +243,7 @@ Il presente documento si divide in tre sezioni principali:
 	\end{itemize}
 	
 	\paragraph{Ricorsione}
-	Bisogna sempre evitare di ricorrere alla ricorsione. Nel caso non fosse possibile trovare un metodo alternativo iterativo è obbligatorio fornire una prova della sua terminazione. 
-	\paragraph{Commenti}
-	
-	
-	
-
-	
+	Bisogna sempre evitare la ricorsione. Nel caso fosse molto difficile trovare un metodo iterativo equivalente, è obbligatorio fornire una prova di terminazione dell'algoritmo ricorsivo.
 
 	\paragraph{Documentazione del codice}
 	Per facilitare la manutenibilità del codice, i programmatori devono rispettare le seguenti norme sulla documentazione:
@@ -266,36 +260,34 @@ Il presente documento si divide in tre sezioni principali:
 	\end{itemize}
 	La documentazione di file e metodi in particolare i programmatori devono seguire le strutture descritte sotto bassate sulle linee guida di Javadoc e Jsdoc.
 	\begin{itemize}
-	\item all'inizio di ogni file .java si inserisce un commento riguardante il documento con la seguente struttura:
-	\begin{equation}
-	/**
-	* Descrizione del file
-	*
-	*
-	* @author Autore
-	* @version Versione corrente del file
-	* @since Versione del prodotto dalla quale è presente il file
-	*/
-	\end{equation}
-	\item Per documentazione di inizio file in Javascript rispettare sempre la struttura descritta per i file .java al punto sopra.
-	\item all'inizio di ogni metodo java si inserisce un commento con la struttura descritta in seguito:
-	\begin{equation}
-	 /** 
-     * Descrizione del metodo
-     * @param NomeParametro    Descrizione parametro
-     * @return Tiporitorno     Valore di ritorno 
-     */
-	\end{equation}
-	Il numero di @param dipende dal numero di parametri del metodo.	@return si omette nel caso di metodi void e costruttori. Alcuni parametri aggiuntivi posso essere \emph{@throws TipoEccezione Motivo} nel caso di eccezioni controllate presenti nel metodo e \emph{@since} se il metodo è stato inserito in una versione diversa rispetto al file.
-	
-	\item all'inizio di ogni funzione javascript si inserisce un commento con la struttura descritta in seguito:
-	\begin{equation}
-	 /** 
-     * Descrizione della funzione
-     * @param {Tipoparametro} NomeParametro - Descrizione parametro
-     */
-	\end{equation}
-	
+		\item all'inizio di ogni file \texttt{.java} si inserisce un commento, riguardante il documento, con la seguente struttura:
+		\begin{verbatim}
+		/**
+		* Descrizione del file
+		*
+		*
+		* @author Autore
+		* @version Versione corrente del file
+		* @since Versione del prodotto dalla quale è presente il file
+		*/
+		\end{verbatim}
+		\item Per documentazione di inizio file in Javascript rispettare sempre la struttura descritta per i file \texttt{.java} al punto sopra.
+		\item all'inizio di ogni metodo Java si inserisce un commento con la struttura descritta in seguito:
+		\begin{verbatim}
+		/** 
+		* Descrizione del metodo
+		* @param NomeParametro    Descrizione parametro
+		* @return Tiporitorno     Valore di ritorno 
+		*/
+		\end{verbatim}
+		Il numero di \texttt{@param} dipende dal numero di parametri del metodo. Il tag \texttt{@return} si omette nel caso di metodi \texttt{void} e costruttori. Alcuni parametri aggiuntivi posso recare \texttt{@throws TipoEccezione Motivo}, nel caso di eccezioni controllate presenti nel metodo e \texttt{@since} se il metodo è stato inserito in una versione diversa rispetto al file.
+		\item all'inizio di ogni funzione JavaScript si inserisce un commento con la seguente struttura:
+		\begin{verbatim}
+		/** 
+		* Descrizione della funzione
+		* @param {Tipoparametro} NomeParametro - Descrizione parametro
+		*/
+		\end{verbatim}
 	\end{itemize}
 	
 	\paragraph{Tecnologie da usare}
