--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -2,10 +2,10 @@
 % da usare tramite il comando \input{../../util/hx-vers}
 % da aggiornare con il comando ./vers.py dalla directory util
 
-\newcommand{\AdR}{\emph{\mbox{Analisi_dei_requisiti_1_0_0.tex}}}
-\newcommand{\Glossario}{\emph{\mbox{Glossario_1_0_0.tex}}}
-\newcommand{\PdP}{\emph{\mbox{Piano_di_progetto_1_0_0.tex}}}
-\newcommand{\PdQ}{\emph{\mbox{Piano_di_qualifica_1_0_0.tex}}}
-\newcommand{\ST}{\emph{\mbox{Specifica_tecnica_0_0_1.tex}}}
-\newcommand{\NdP}{\emph{\mbox{Norme_di_progetto_1_0_0.tex}}}
-\newcommand{\SdF}{\emph{\mbox{Studio_di_fattibilita_1_0_0.tex}}}
+\newcommand{\AdR}{\emph{\mbox{Analisi\_dei\_requisiti\_2\_0\_0.tex}}}
+\newcommand{\Glossario}{\emph{\mbox{Glossario\_1\_0\_0.tex}}}
+\newcommand{\PdP}{\emph{\mbox{Piano\_di\_progetto\_2\_0\_0.tex}}}
+\newcommand{\PdQ}{\emph{\mbox{Piano\_di\_qualifica\_1\_0\_0.tex}}}
+\newcommand{\ST}{\emph{\mbox{Specifica\_tecnica\_0\_0\_1.tex}}}
+\newcommand{\NdP}{\emph{\mbox{Norme\_di\_progetto\_2\_0\_0.tex}}}
+\newcommand{\SdF}{\emph{\mbox{Studio\_di\_fattibilita\_1\_0\_0.tex}}}
