--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -523,8 +523,8 @@ La verifica è un processo analitico che va implementato in due passi successivi
 	\paragraph{Test di sistema}
 		I test di sistema vengono eseguiti su un prodotto ritenuto completo per verificarne i requisiti. Vengono identificati dalla seguente sintassi:
 			\[TS[Codice Requisito]\]
-	\paragraph{Test di accettazione}
-		I test di accettazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
+	\paragraph{Test di validazione}
+		I test di validazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
 			\[TV[Codice Requisito]\]
 
 \subsubsection{Metriche}
