Aggiunta tabella test di integrazione PdQ

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -1491,6 +1491,35 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 
 	\subsection{Test di Integrazione}
 	I test di integrazione consentono di controllare che più moduli funzionino assieme in modo corretto.
+\normalsize
+\begin{longtable}{|c|>{}m{8cm}|c|}
+\hline 
+\textbf{Id Test} & \textbf{Descrizione} & \textbf{Stato}\\
+\hline
+\endhead
+\hypertarget{TI1}{TI1} & Test di integrazione finale per le componenti Client e Server & \textit{Non Implementato}\\ \hline
+\hypertarget{TI2}{TI2} & Test di integrazione fra le componenti Compiler, Controller, Generator, Parser, Project, Template e Utility. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI3}{TI3} & Verificare che il sistema gestisca correttamente le componenti relative al package Compiler. In particolare che gestisca correttamente l'interazione con il Controller di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI4}{TI4} & Verificare che il sistema gestisca correttamente le componenti relative al package Controller. In particolare che gestisca correttamente l'interazione con i package Compiler, Utility, Parser e Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI5}{TI5} & Verificare che il sistema gestisca correttamente le componenti relative al package Generator. In particolare che gestisca correttamente l'interazione con i package Controller, Project e Template di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI6}{TI6} & Verificare che il sistema gestisca correttamente le componenti relative al package Parser. In particolare che gestisca correttamente l'interazione con i package Controller e Project di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI7}{TI7} & Verificare che il sistema gestisca correttamente le componenti relative al package Project. In particolare che gestisca correttamente l'interazione con i package Generator, Parser e Stereotype di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI8}{TI8} & Verificare che il sistema gestisca correttamente le componenti relative al package Stereotype. In particolare che gestisca correttamente l'interazione con il package Project di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI9}{TI9} & Verificare che il sistema gestisca correttamente le componenti relative al package Template. In particolare che gestisca correttamente l'interazione con il package Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI10}{TI10} & Verificare che il sistema gestisca correttamente le componenti relative al package Utility. In particolare che gestisca correttamente l'interazione con il package Controller di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI11}{TI11} & Verificare che il sistema gestisca correttamente le componenti relative al package Compiler::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Compiler di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI12}{TI12} & Verificare che il sistema gestisca correttamente le componenti relative al package Generator::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI13}{TI13} & Verificare che il sistema gestisca correttamente le componenti relative al package Template::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Template di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti CellType, Collection, Model e View e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI15}{TI15} & Verificare che il sistema gestisca correttamente le componenti relative al package CellType. In particolare che gestisca correttamente l'interazione con il package View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package Collection. In particolare che gestisca correttamente l'interazione con il package Model di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package Model. In particolare che gestisca correttamente l'interazione con i package Collection e View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI18}{TI18} & Verificare che il sistema gestisca correttamente le componenti relative al package Model::Utility. In particolare che gestisca correttamente l'interazione con i package Model::CellType, Model e View di SWEDesigner::Client. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package View. In particolare che gestisca correttamente l'interazione con i package Model, Model::CellType e Model::Utility di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\caption[Test di Integrazione]{Test di Integrazione}
+\label{tabella:test2}
+\end{longtable}
+\clearpage
 	
 
 
