Eclipse in NdP + rif. normativi modificati

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -74,15 +74,15 @@ Il presente documento si divide in tre sezioni principali:
 \begin{itemize}
 	\item ISO/IEC 12207-1995: \url{www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}, visitato in data 08/02/2017;
 	\item Capitolato d'appalto dell'azienda \ZU: \url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017. % normativo o informativo?
+	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html};
+	\item API \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}.
 \end{itemize}
 
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item L. Pantieri, \emph{L'arte di scrivere in Latex}: \url{www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}, visitato in data 08/02/2017;
 	\item \emph{SDMetrics User Manual}: \url{www.sdmetrics.com/manual/index.html}, visitato in data 21/02/2017;
-%	\item \emph{CodePro Analytix Help Contents};
-	\item Standard \emph{JavaDoc}: \url{www.oracle.com/technetwork/java/javase/documentation/codeconvtoc-136057.html};
-	\item API \emph{JSDdoc}: \url{github.com/jsdoc3/jsdoc}.
+%	\item \emph{CodePro Analytix Help Contents}, accessibile da Eclipse;
 \end{itemize}
 
 
@@ -293,8 +293,8 @@ Il presente documento si divide in tre sezioni principali:
 	\paragraph{Tecnologie da usare}
 	Ogni programmatore deve utilizzare i seguenti editor di testo:
 	\begin{itemize}
-		\item \emph{IntelliJ IDEA} per scrivere codice Java;
-		\item \emph{IntelliJ Webstorm} per scrivere codice JavaScript.
+		\item \emph{Eclipse} per scrivere codice Java;
+		\item \emph{JetBrains Webstorm} per scrivere codice JavaScript.
 	\end{itemize}
 	Il programmatore è tenuto ad accettare la formattazione automatica proposta dall'editor.
 
